# CKS

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
architecture/: index.html
case-studies/: index.html
case-studies/catching-fake-citations/: index.html
cks-core/: index.html
cks-core/api/: index.html
cks-core/architecture/: index.html
cks-core/concepts/: index.html
cks-core/contracts/: index.html
cks-core/examples/: index.html
cks-core/getting-started/: index.html
cks-core/plugins/: index.html
cks-core/specifications/: index.html
cks-core/specifications/CKS-001_Core_Specification/: index.html
cks-mcp/: index.html
cks-mcp/ARCHITECTURE/: index.html
cks-runtime/: index.html
concepts/: index.html
contracts/: index.html
docs/: api.md  architecture.md  concepts.md  contracts.md  examples.md  getting-started.md  index.md  plugins.md  quickstart.md
docs/case-studies/: catching-fake-citations.md  index.md
docs/cks-core/: api.md
docs/cks-mcp/: index.md
docs/cks-runtime/: index.md
docs/specifications/: CKS-002_Canonical_Construction_Specification.md  CKS-003_Canonical_Serialization.md  CKS-005_Validator_Specification.md  CKS-006_Reference_Engine_Specification.md  CKS-008_Reference_Conformance_Specification.md  index.md
examples/: index.html
examples/corpus/: evolve_add.json  invalid_dangling_reference.json  invalid_derivation_cycle.json  invalid_duplicate_id.json  person.cks.json  person.jsonld  person.rdf  person.ttl  person_from_rdfxml.cks.json  valid_theory_example.json  valid_theory_export.ttl
examples/json/: cks-schema.json  valid_minimal.json
getting-started/: index.html
plugins/: index.html
quickstart/: index.html
scripts/: validate_cks.py
search/: search_index.json
specifications/: index.html
specifications/CKS-000_Canonical_Foundations_and_Terminology/: index.html
specifications/CKS-001_Core_Specification/: index.html
specifications/CKS-002_Canonical_Construction_Specification/: index.html
specifications/CKS-003_Canonical_Serialization/: index.html
specifications/CKS-004_Canonical_Structure_Evolution/: index.html
specifications/CKS-005_Validator_Specification/: index.html
specifications/CKS-006_Reference_Engine_Specification/: index.html
specifications/CKS-007_Canonical_Knowledge_Interface/: index.html
specifications/CKS-008_Reference_Conformance_Specification/: index.html
specifications/CKS-B001-PY_Python_Reference/: index.html
src/cks/: __init__.py  core.py  diagnostics.py  engine.py  evolution.py  interface.py  plugin.py  result.py  schema.py  serialization.py  validation.py  validator.py
src/cks.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_adapters.py  test_cli.py  test_constraints_projection.py  test_constraints_verification.py  test_core.py  test_diagnostics.py  test_engine.py  test_evolution.py  test_interface.py  test_plugin.py  test_result.py  test_serialization.py  test_validator.py
(+53 files in other folders)
