[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cks"
version = "0.1.0"
description = "Canonical Knowledge Structure — Reference Implementation"
readme = "README.md"
authors = [{name = "Vladyslav Hruznov"}]
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = [
  "canonical-knowledge-structure",
  "knowledge-representation",
  "validation",
  "semantics",
]
classifiers = [
  "Development Status :: 3 — Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Deus-corp/CKS"
Documentation = "https://github.com/Deus-corp/CKS"

[tool.setuptools.packages.find]
where = ["src"]