[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cks-core"
version = "1.7.0"
description = "Canonical Knowledge Structure — Reference Implementation"
readme = "README.md"
authors = [{name = "Vladyslav Hruznov"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.0",
    "rdflib>=7.0",
]
keywords = [
  "canonical-knowledge-structure",
  "knowledge-representation",
  "validation",
  "semantics",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Deus-corp/cks-core"
Documentation = "https://github.com/Deus-corp/cks-core"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cks.schemas" = ["*.json"]

[project.scripts]
cks = "cks.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
]